# agentic-tdd-manus-copilot-sonnet-edition

./: Makefile  README.md  agentic-tdd: Multi-Agent Test-Driven Development CLI.md  project-instructions.txt  pyproject.toml
agentic_tdd/: __init__.py  __main__.py  cli.py  config.py  logger.py
agentic_tdd/agents/: base.py  implementer.py  refactorer.py  supervisor.py  tester.py
agentic_tdd/llm/: provider.py
agentic_tdd/runners/: base.py  rust.py
agentic_tdd/utils/: git.py  shell.py
